Package: aroma.core
===================

Version: 1.4.0 [2010-01-02]
o BUG FIX: Added getDefaultFullName() for AromaMicroarrayDataSet and 
  AromaTabularBinarySet in order to override (parent=1) the new default 
  of GenericDataFileSet in R.filesets v0.7.0, which would return the
  chip type (parent=0) as the name.
o Package passes R CMD check on R v2.10.1 and R v2.11.0 devel and
  all of its redundancy tests.


Version: 1.3.8 [2010-01-02]
o Added getPairedNames() to CopyNumberChromosomalModel which returns
  combined '<test>vs<ref>' names, e.g. 'TumorvsNormal'.  The default
  behavior is that if <ref> is the average of a pool, then the
  paired name is '<test>', e.g. 'Tumor'.
o CLEAN UP: Moved all GenericSummary code to R.utils.


Version: 1.3.7 [2010-01-01]
o Added argument 'pattern' to byName() for AromaUnitTotalCnBinarySet
  and AromaUnitFracBCnBinarySet.
o getSets() of AromaMicroarrayDataSetTuple overrides the default method
  by adding the chip types as the names of the returns list.
o CLEAN UP: Removed getSetTuple() from ChromosomeExplorer.
o ROBUSTNESS: Using new Arguments$getInstanceOf() were possible.
o ROBUSTNESS: Now CopyNumberChromosomalModel() asserts that none of the
  test samples have duplicated names.
o ROBUSTNESS: Now all index arguments are validated correctly 
  using the new 'max' argument of Arguments$getIndices().  Before
  the case where "max == 0" was not handled correctly. 
o BUG FIX: translateFullNames() of ChromosomeExplorer would translate the
  full names, but return the original ones.
o BUG FIX: getFullNames() of ChromosomeExplorer reported: Error in 
  UseMethod("translateFullNames") : no applicable method for 
  'translateFullNames' applied to an object of class "character".


Version: 1.3.6 [2009-12-08]
o BUG FIX: extractMatrix() of AromaUnitCallFile did not recognize NoCalls.


Version: 1.3.5 [2009-12-02]
o BUG FIX: extractRawCopyNumbers() for RawCopyNumbers would give 
  an error if the internal logBase was NULL.

