@@ -6,7 +6,7 @@ Author: Henrik Bengtsson <henrikb@braju.com>
 Maintainer: Henrik Bengtsson <henrikb@braju.com>
 Depends: R (>= 2.8.0), R.methodsS3 (>= 1.0.3), R.oo (>= 1.6.5), R.utils (>= 1.3.0), R.cache (>= 0.2.0), R.filesets (>= 0.7.0), R.rsp (>= 0.3.6), matrixStats (>= 0.1.4), digest (>= 0.4.2), aroma.light (>= 1.14.0)
 Imports: affxparser (>= 1.16.0), RColorBrewer (>= 1.0-2)
-Suggests: RColorBrewer (>= 1.0-2), EBImage (>= 2.2.0), Cairo (>= 1.3-5), sfit (>= 0.1.8), expectile (>= 0.2.5), geneplotter (>= 1.16.0), GLAD (>= 1.12.0), DNAcopy (>= 1.20.0), HaarSeg (>= 0.0.2)
+Suggests: RColorBrewer (>= 1.0-2), EBImage (>= 2.2.0), Cairo (>= 1.3-5), sfit (>= 0.1.8), expectile (>= 0.2.5), geneplotter (>= 1.16.0), GLAD (>= 1.12.0), DNAcopy (>= 1.20.0), HaarSeg (>= 0.0.2), mpcbs (>= 1.0.0)
 Description: This package is a private support package for aroma.affymetrix et al.  The methods and classes of this package are independent of platform.  Its API is in alpha and beta stage.
 License: LGPL (>= 2.1)
 URL: http://www.aroma-project.org/
