@@ -2,6 +2,7 @@ Package: aroma.core
 ===================
 
 Version: 1.4.0 [2010-01-02]
+o Added trial version of segmentByMPCBS().
 o BUG FIX: Added getDefaultFullName() for AromaMicroarrayDataSet and 
   AromaTabularBinarySet in order to override (parent=1) the new default 
   of GenericDataFileSet in R.filesets v0.7.0, which would return the
